# phd_research

./: .gitignore  AverageUnitCellNanotube.ipynb  HRSTEMAtoms.ipynb  NanoparticleSizeDistribution.ipynb  Pipfile  README.md  datCasinoToh5.ipynb  hBNonSiSEMTrajectories.ipynb  pyproject.toml  requirements.txt
data/: HRSTEM.h5  hBN_100nm_Si_10kV.h5  hBN_100nm_Si_2kV.h5  hBN_100nm_Si_5kV.h5  nanoparticles_01.h5  nanoparticles_02.h5  nanoparticles_03.h5  nanoparticles_04.h5  nanoparticles_05.h5
notebooks/: AverageUnitCellNanotube.ipynb  HRSTEMAtoms.ipynb  NanoparticleSizeDistribution.ipynb  datCasinoToh5.ipynb  hBNonSiSEMTrajectories.ipynb
scripts/: hrstem_atoms_figure.py  nanoparticle_figure.py
