[tool.poetry]
name = "phd-research"
version = "0.1.0"
description = ""
package-mode = false

[tool.poetry.dependencies]
python = "~3.10"
jupyter = "*"
pandas = "*"
matplotlib = "*"
scikit-image = "*"
pyarrow = "*"
h5py = "*"
tqdm = "*"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
